# R

./: .bot-smoke-test  .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
automations/: README.md  interpreted-rust-in-c.md
docs/: automation-command-fixtures.md  automation-index.md  autonomous-agent-prompt.md  dashboard-automation-index.md  dashboard-example-fixtures.md  dashboard-index.md  dashboard-schema.md  dashboard-section-writer-matrix.md  release-automation-index.md  release-checklist.md  release-example-fixtures.md  release-example-sections.md  release-examples.md  release-index.md  release-section-writer-matrix.md  usage-examples.md
docs/plans/: autonomous-agent.md
docs/release/: checklist.json
runtime/: rustic.c
runtime/include/: rustic.h
src/r_project/: __init__.py  __main__.py  lint.py  memory.py  report.py
status/: current-state.md  missing-features.md  research.md  stuck.md  todo.md
tests/: test_docker_verification.py  test_issue_2_smoke.py  test_lint_command.py  test_memory_layout.py  test_packaging.py  test_project_metadata_docs.py  test_project_report.py  test_rustic_interpreter.py
tests/fixtures/: automation-index-release-smoke.md  issue-2-smoke.txt  memory-overlap-demo-schema.json  memory-overlap-totals-name-prefix-depth-2.json  memory-overlap-totals-name-prefix-depth-2.md  memory-overlap-totals.json  memory-overlap-totals.md  memory-threshold-violations-name-prefix-depth-2.json  memory-threshold-violations-name-prefix-depth-2.md  memory-threshold-violations.json  rustic_expression_driver.c  (+25 more)
(+3 files in other folders)
