[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "r-project"
version = "0.1.0"
description = "Automated worker showcase for building a C-hosted Rust-like interpreter."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"

[project.scripts]
r-project = "r_project.__main__:main"
r-project-lint = "r_project.lint:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
